--- a/divy/index.html
+++ b/divy/index.html
@@ -7,9 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-    
-        div{height: 200px;
+    /* margin - margines na zewnatrz, padding - margines wewnatrz, box sizing: border-box (padding nie wplywa na diva*/
+       body > div{
+        box-sizing: border-box;    
+        height: 200px;
         width: 300px;
+        margin: 20px;
+        padding: 20px;
+        border: 4px solid black;
         background: rebeccapurple;
 
         }
@@ -19,7 +24,11 @@
 <body>
     
     <!-- div - element blokowy, pudelko -->
-<div></div>
+<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptas praesentium, totam, doloremque, at voluptatum fugit distinctio architecto magnam facere laudantium alias ipsa dolor et itaque mollitia placeat vel nam?</div>
 
+<div>
+    <div></div>
+
+</div>
 </body>
 </html>
